--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,6 @@
 build_platform:
   osx_arm64: osx_64
+  linux_aarch64: linux_64
 conda_forge_output_validation: true
 github:
   branch_name: main
@@ -7,3 +8,5 @@ github:
 test: native_and_emulated
 conda_build:
   pkg_format: '2'
+provider:
+  linux_aarch64: default
