--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython <3                              # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ stdlib("c") }}
@@ -26,7 +26,9 @@ requirements:
     - python
     - pip
     - numpy
-    - cython <3
+    - setuptools
+    - setuptools-scm
+    - cython
   run:
     - python
     - {{ pin_compatible('numpy') }}
